- closeable tab for corepad.
- tabengine moved to switch (for a better code functionality) and checking argument for validation
- moved to non movable page in corefm.
- changed open folder to screen shot folder.
- reload button at bottom in start.
- added support for multiple file's combined size in corefm.
- if bookmark is booked it shows a message and show the section it was booked.
- full trash support with restorable file.
- notes at coreaction is saved and restored in every restart.
- Fixed Empty the trash.
- battery properties converted to stringlistmodel.
- improved app engine.
- added a button to set search folder in search app.
- fixed corepad's tab related problems.
- QScreen moved to golbalfunctions.
- fixed coreaction focuseout problem.
- redesinged coreaction.
- coreaction's widget is now customizable.
- fixed coreaction setting bug.
- coreaction is now lighter in system resource.
- battery widget in coreaction now updates every 5 second.
- changed corepad page ui.
- corefm's properties would open faster now
- coreaction will automatically hide within 10 sec in startup.
- added drive list in corefm with click to mount support.
- option to make file executable via corefm's properties.
- fixed recent path not opening with double click in start.
- now opening a video file in coreplayer automatically plays it.
- changed properties ui in corefm.
- fixed dobule clicking file goes to rename mode in corefm.
- dashborad now show used network in general section.



version 2,Released date Monday, March 26, 2018

- fixed tabengine in corebox.
- fixed rename problem in corefm.
- fixed view mode in corefm.
- icondlg.cpp and header >> removed
- arrange item fixed in corefm.
- fixed hidden is not saving it's last state.
- improved archiving in corefm.
- fixed alarm page in coretime.
- removed coretime settings.
- fixed page select in coretime.
- fixed sound path in coretime.
- fixed the settings.
- changed start ui.
- removed background from start.